--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multitenant-mongodb",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Implments function to create mongodb connections and winston logger using mongodb",
   "main": "index.js",
   "scripts": {
@@ -8,8 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "mongoose": "^8.15.0",
-    "multitenant-express": "^0.1.1"
+    "mongoose": "^8.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
